[TASK] - Implementing styling where possible. - Updated icons added. - Changed height of System News widget. - The layout-template now uses the class-names from TYPO3 7.

--- a/Resources/Private/Templates/Dashboard/List.html
+++ b/Resources/Private/Templates/Dashboard/List.html
@@ -13,8 +13,8 @@
                     <div class="panel panel-default">
                         <div class="panel-heading clearfix">
                             <h4 class="panel-title pull-left">
-                                <f:image src="{d:be.dashboardWidget.IconSrc(widgetIdentifier: dashboardWidgetSetting.widgetIdentifier)}" width="27" height="27"></f:image>
-                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion-{dashboardCurrent.uid}" href="#collapse-{dashboardCurrent.uid}-{dashboardWidgetSetting.uid}"><strong>{dashboardWidgetSetting.title}</strong></a>
+                                <f:image src="{d:be.dashboardWidget.IconSrc(widgetIdentifier: dashboardWidgetSetting.widgetIdentifier)}" width="20" height="20"></f:image>
+                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion-{dashboardCurrent.uid}" href="#collapse-{dashboardCurrent.uid}-{dashboardWidgetSetting.uid}">{dashboardWidgetSetting.title}</a>
                             </h4>
                             <div class="btn-toolbar pull-right">
                                 <div class="btn-group btn-group-sm" role="group">
