--- a/Resources/Private/Layouts/Default.html
+++ b/Resources/Private/Layouts/Default.html
@@ -1,40 +1,52 @@
 {namespace d=TYPO3\CMS\Dashboard\ViewHelpers}
 <f:be.container loadJQuery="{settings.loadJQuery}" includeCssFiles="{includeCssFiles}" includeJsFiles="{includeJsFiles}">
   <div class="typo3-fullDoc">
-    <div id="typo3-docheader">
-      <div class="typo3-docheader-functions">
-        <div class="left">
-          {dashboardCurrent.title}
-          <f:comment>
-          <select onchange="jumpToUrl(this.options[this.selectedIndex].value,this)">
-              <option value="" selected>{dashboardCurrent.title}</option>
-              <f:for each="{dashboards}" as="title" key="uid" iteration="dashboardIteration">
-                  <f:if condition="{key} != {dashboardCurrent.uid}">
-                      <option value="{f:uri.action(action:'list',arguments:'{dashboardUid:uid}')}">{title}</option>
-                  </f:if>
-              </f:for>
-          </select>
-          </f:comment>
+
+
+    <div class="module-docheader t3js-module-docheader" style="height: auto;">
+      <div class="module-docheader-bar module-docheader-bar-navigation t3js-module-docheader-bar t3js-module-docheader-bar-navigation" style="height: auto;">
+        <div class="module-docheader-bar-column-left">
         </div>
-        <div class="right">
-            <a onclick="{link}"><span class="t3-icon fa fa-cog"></span></a>
+        <div class="module-docheader-bar-column-right">
+          
         </div>
       </div>
-      <div class="typo3-docheader-buttons">
-        <div class="left">
-          <a data-toggle="modal" data-target="#addNewWidgetModal"><span class="t3-icon fa fa-plus-square"></span></a>
+      <div class="module-docheader-bar module-docheader-bar-buttons t3js-module-docheader-bar t3js-module-docheader-bar-buttons" style="height: auto;">
+        <div class="module-docheader-bar-column-left">
+          <div class="btn-toolbar" role="toolbar" aria-label="">
+
+          </div>
         </div>
-        <div class="right">
+
+        <div class="module-docheader-bar-column-right">
+          <div class="btn-toolbar" role="toolbar" aria-label="">
+
+            <a onclick="{link}" class="btn btn-default btn-sm btn-dashboard" title="">Dashboard Settings
+              <span class="t3js-icon icon icon-size-small icon-state-default">
+                <span class="icon-markup">
+                  <span class="t3-icon fa fa-cog"></span>
+                </span>
+              </span>
+            </a>
+
+            <a data-toggle="modal" data-target="#addNewWidgetModal" class="btn btn-default btn-sm " title="">
+              <span class="t3js-icon icon icon-size-small icon-state-default">
+                <span class="icon-markup">
+                  <span class="t3-icon fa fa-plus-square"></span>
+                </span>
+              </span>
+            </a>
+
+          </div>
         </div>
       </div>
     </div>
+
     <div id="typo3-docbody">
         <f:flashMessages renderMode="div" />
         <f:render section="content" />
     </div>
   </div>
-
-
 
 
   <!-- Modal Form add new widget-->
