[CHORE] Replaced static text with label.

--- a/Resources/Private/Layouts/Default.html
+++ b/Resources/Private/Layouts/Default.html
@@ -21,7 +21,7 @@
         <div class="module-docheader-bar-column-right">
           <div class="btn-toolbar" role="toolbar" aria-label="">
 
-            <a onclick="{link}" class="btn btn-default btn-sm btn-dashboard" title="">Dashboard Settings
+            <a onclick="{link}" class="btn btn-default btn-sm btn-dashboard" title="">{f:translate(key:'LLL:EXT:dashboard/Resources/Private/Language/locallang.xlf:tx_dashboard_domain_model_dashboardsettings')}
               <span class="t3js-icon icon icon-size-small icon-state-default">
                 <span class="icon-markup">
                   <span class="t3-icon fa fa-cog"></span>
