[BUGFIX] Prevent exceptions on code by checking for null values

--- a/Resources/Private/Layouts/Default.html
+++ b/Resources/Private/Layouts/Default.html
@@ -43,7 +43,7 @@
     </div>
 
     <div id="typo3-docbody">
-        <f:flashMessages renderMode="div" />
+        <f:flashMessages />
         <f:render section="content" />
     </div>
   </div>
