--- a/Resources/Private/Templates/DashboardWidgets/ActionWidget.html
+++ b/Resources/Private/Templates/DashboardWidgets/ActionWidget.html
@@ -4,6 +4,7 @@
       <li>
         <a class="dropdown-list-link dropdown-link-list-add-editdelete" href="{entry.action}" target="content">
           <f:format.raw>{entry.icon}</f:format.raw>{entry.title}
+          {core:icon(identifier: entry.t3_tables, size: 'small', alternativeMarkupIdentifier: 'inline')}
         </a>
       </li>
     </f:for>
