[WIP] refactoring and testing different js libs etc

--- a/Resources/Private/Templates/Dashboard/Index.html
+++ b/Resources/Private/Templates/Dashboard/Index.html
@@ -16,7 +16,7 @@
 <f:comment></f:comment>
 
 
-<f:if condition="{dashboardCurrent.dashboardWidgetSettings}">
+<f:if condition="{dashboard}">
 	<f:then>
 		<f:for each="{dashboardCurrent.dashboardWidgetSettings}" as="dashboardWidgetSetting" iteration="dashboardWidgetIteration">
 			<div class="panel panel-default">
