--- a/Resources/Private/Templates/Dashboard/Index.html
+++ b/Resources/Private/Templates/Dashboard/Index.html
@@ -18,26 +18,32 @@
 
 <f:if condition="{dashboard}">
 	<f:then>
-		<f:for each="{dashboardCurrent.dashboardWidgetSettings}" as="dashboardWidgetSetting" iteration="dashboardWidgetIteration">
-			<div class="panel panel-default">
-				<div class="panel-heading clearfix">
-					<h4 class="panel-title pull-left">
-						<f:image src="{d:be.dashboardWidget.IconSrc(widgetIdentifier: dashboardWidgetSetting.widgetIdentifier)}" width="20" height="20"></f:image>
-						<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion-{dashboardCurrent.uid}" href="#collapse-{dashboardCurrent.uid}-{dashboardWidgetSetting.uid}">{dashboardWidgetSetting.title}</a>
-					</h4>
-					<div class="btn-toolbar pull-right">
-						<div class="btn-group btn-group-sm" role="group">
-							<a class="btn btn-default" href="#" onclick="{d:be.dashboardWidget.EditOnClick(dashboardWidgetSetting: dashboardWidgetSetting)}" title="Edit"><span class="t3-icon fa t3-icon fa fa-pencil"> </span></a>
+		<div data-identifier="grid-stack" class="grid-stack" data-gs-width="12" data-gs-animate="yes">
+			<f:for each="{dashboard.dashboardWidgetSettings}" as="dashboardWidgetSetting" iteration="dashboardWidgetIteration">
+				<div class="grid-stack-item"
+					data-gs-x="{dashboardWidgetSetting.x}"
+		 			data-gs-y="{dashboardWidgetSetting.y}"
+		 			data-gs-width="{dashboardWidgetSetting.width}"
+		 			data-gs-height="{dashboardWidgetSetting.height}"
+					data-gs-id="{dashboardWidgetSetting.uid}">
+
+					<div class="grid-stack-item-content">
+						<div class="clearfix">
+							<h5 class="pull-left">
+								<f:image src="{d:be.dashboardWidget.IconSrc(widgetIdentifier: dashboardWidgetSetting.widgetIdentifier)}" width="20" height="20"></f:image>
+								{dashboardWidgetSetting.title}
+							</h5>
+							<div class="btn-toolbar pull-right">
+								<div class="btn-group btn-group-sm" role="group">
+									<a class="btn btn-default" href="#" onclick="{d:be.dashboardWidget.EditOnClick(dashboardWidgetSetting: dashboardWidgetSetting)}" title="Edit"><span class="t3-icon fa t3-icon fa fa-pencil"> </span></a>
+								</div>
+							</div>
 						</div>
-					</div>
-				</div>
-				<div id="collapse-{dashboardCurrent.uid}-{dashboardWidgetSetting.uid}" class="panel-collapse collapse in">
-					<div class="panel-body">
 						<f:format.raw><d:be.dashboardWidget dashboardWidgetSetting="{dashboardWidgetSetting}"></d:be.dashboardWidget></f:format.raw>
 					</div>
 				</div>
-			</div>
-		</f:for>
+			</f:for>
+		</div>
 	</f:then>
 	<f:else>	
 		<f:be.infobox title="Message title">
@@ -47,7 +53,7 @@
 </f:if>
 
 
-
+<f:comment>
 <div data-identifier="grid-stack" class="grid-stack" data-gs-width="12" data-gs-animate="yes">
 	<div class="grid-stack-item"
 		 data-gs-x="0"
@@ -71,7 +77,7 @@
 	<div class="grid-stack-item" data-gs-x="8" data-gs-y="4" data-gs-width="2" data-gs-height="2"><div class="grid-stack-item-content">10</div></div>
 	<div class="grid-stack-item" data-gs-x="10" data-gs-y="4" data-gs-width="2" data-gs-height="2"><div class="grid-stack-item-content">11</div></div>
 </div>
-
+</f:comment>
 <div data-toggle="tooltip">Tooltip</div>
 
 </f:section>
