--- a/Resources/Public/Css/Backend/gridstack.css
+++ b/Resources/Public/Css/Backend/gridstack.css
@@ -1,32 +1,18 @@
+.panel-heading {
+    cursor: move;
+}
 .grid-stack {
-    /*height: 460px;*/
-    /*background-color: #2c3e50;*/
 }
 .grid-stack-item .ui-resizable-handle {
     border: none;
 }
-.grid-stack-item-content {
-    border: 1px solid slategray;
+.grid-stack>.grid-stack-item>.grid-stack-item-content {
+    border: 1px solid #ccc;
+    border-radius: 2px;
+    box-shadow: 0 2px 0 rgba(0,0,0,.1);
 }
 
-/*
-.grid-stack-item-content {
-    background: white;
-    color: #2c3e50;
-    font-family: 'Indie Flower', cursive;
-    text-align: center;
-    font-size: 20px;
-}
-*/
-.grid-stack-item-content .fa {
-    font-size: 64px;
-    display: block;
-    margin: 20px 0 10px;
-}
-
-header a, header a:hover { color: #fff; }
-
-.darklue { background: #2c3e50; color: #fff; }
-.darklue hr.star-light::after {
-    background-color: #2c3e50;
+.grid-stack-item-content .widget_header {
+    cursor: move;
+    height: 30px;
 }
