[WIP] refactoring and testing different js libs etc

--- a/Resources/Public/Css/Backend/dashboard.css
+++ b/Resources/Public/Css/Backend/dashboard.css
@@ -9,6 +9,10 @@
 	line-height: 1.3em;
 }
 */
+.media-list {
+	padding-top: 10px;
+}
+
 .rss-widget .media-heading,
 .rss-widget .media-heading a {
 	color: #FF8700;
