[WIP] refactoring and testing different js libs etc

--- a/Resources/Private/Templates/DashboardWidgets/SysNewsWidget.html
+++ b/Resources/Private/Templates/DashboardWidgets/SysNewsWidget.html
@@ -1,21 +1,26 @@
 <f:if condition="{systemNews -> f:count()} > 0">
-  <ul class="media-list">
-    <f:for each="{systemNews}" as="item">
-      <li class="media sysnews-widget">
-        <div class="media-left">
-          <div class="bgColor2 text-center text-uppercase date-badge">
-            <p><strong><f:format.date format="d">{item.date}</f:format.date></strong></p>
-            <p><strong><f:format.date format="M">{item.date}</f:format.date></strong></p>
+  <f:then>
+    <ul class="media-list">
+      <f:for each="{systemNews}" as="item">
+        <li class="media sysnews-widget">
+          <div class="media-left">
+            <div class="bgColor2 text-center text-uppercase date-badge">
+              <p><strong><f:format.date format="d">{item.date}</f:format.date></strong></p>
+              <p><strong><f:format.date format="M">{item.date}</f:format.date></strong></p>
+            </div>
           </div>
-        </div>
-        <div class="media-body">
-          <h5 class="media-heading"><strong>{item.header}</strong></h5>
-          <f:if condition="{item.content}">
-            <p><f:format.raw>{item.content}</f:format.raw></p>
-          </f:if>
-        </div>
-        <div class="line"></div>
-      </li>
-    </f:for>
-  </ul>
+          <div class="media-body">
+            <h5 class="media-heading"><strong>{item.header}</strong></h5>
+            <f:if condition="{item.content}">
+              <p><f:format.raw>{item.content}</f:format.raw></p>
+            </f:if>
+          </div>
+          <div class="line"></div>
+        </li>
+      </f:for>
+    </ul>
+  </f:then>
+  <f:else>
+    <div class="alert alert-warning">TRANSLATE: No news available</div>
+  </f:else>
 </f:if>
