[!!!] Move away from reserved TYPO3 namespace

--- a/Resources/Private/Templates/Dashboard/Index.html
+++ b/Resources/Private/Templates/Dashboard/Index.html
@@ -1,4 +1,4 @@
-{namespace d=TYPO3\CMS\Dashboard\ViewHelpers}
+{namespace d=Pixelant\Dashboard\ViewHelpers}
 <f:layout name="Dashboard" />
 <f:section name="MainContent">
 
