[!!!] Use Icon API for wizard icons

--- a/Resources/Private/Templates/Dashboard/Index.html
+++ b/Resources/Private/Templates/Dashboard/Index.html
@@ -30,7 +30,7 @@
 							style="display: none;">
 							<div class="grid-stack-item-header clearfix">
 								<div class="pull-left">
-									<f:image src="{d:be.dashboardWidget.IconSrc(widgetIdentifier: dashboardWidgetSetting.widgetIdentifier)}" width="20" height="20"></f:image>
+									<core:icon identifier="{d:be.dashboardWidget.icon(widgetSettings: dashboardWidgetSetting)}" />
 									<span class="title">{dashboardWidgetSetting.title}</span>
 								</div>
 								<f:comment>
