[FEATURE] Create basic JS Api for interactive widgets
Let widgets define a AMD module that will be initialized
with each widget that is rendered.

The AMD module can be registered when registering the widget
with the "jsModule" property.

The module must implement bootstrapWidget, which will be
called with the widget DOM element and the dashboard app
on initial rendering of the widget.

We also introduce events when the widget content will
be and has been updated.

--- a/Resources/Private/Templates/Dashboard/Index.html
+++ b/Resources/Private/Templates/Dashboard/Index.html
@@ -20,7 +20,7 @@
 			<f:then>
 				<div data-identifier="grid-stack" class="grid-stack" data-gs-width="12" data-gs-animate="yes">
 					<f:for each="{dashboard.widgets}" as="widget" iteration="dashboardWidgetIteration">
-						<div class="grid-stack-item"
+						<div class="grid-stack-item js-widget"
 							data-gs-x="{widget.x}"
 							data-gs-y="{widget.y}"
 							data-gs-width="{widget.width}"
@@ -46,7 +46,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="grid-stack-item-content" data-identifier="widgetContent" data-widgetid="{widget.uid}"></div>
+							<div class="grid-stack-item-content" data-identifier="widgetContent" data-widgetid="{widget.uid}"{f:if(condition: 'widget.settings.jsModule', then: ' data-boot="{widget.settings.jsModule}"')}></div>
 							<div class="grid-stack-item-footer clearfix"></div>
 						</div>
 					</f:for>
