Clean up JS and Fluid template

--- a/Resources/Private/Templates/Dashboard/Index.html
+++ b/Resources/Private/Templates/Dashboard/Index.html
@@ -41,7 +41,7 @@
 								</f:comment>
 								<div class="btn-toolbar pull-right">
 									<div class="btn-group btn-group-sm" role="group">
-										<a class="btn btn-default" href="#" onclick="{d:be.dashboardWidget.EditOnClick(widget: widget)}" title="Edit"><core:icon identifier="actions-open" /></a>
+										<a class="btn btn-default" href="#" onclick="{d:be.dashboardWidget.editOnClick(widget: widget)}" title="Edit"><core:icon identifier="actions-open" /></a>
 										<a class="btn btn-default" href="#" data-identifier="refreshWidget" data-widgetid="{widget.uid}" title="refresh"><core:icon identifier="actions-refresh" /></a>
 									</div>
 								</div>
